# mongo-data-modeling

./: .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml
models/: building_cases.py  test.py
utils/: clients.py  downloader.py  mappers.py  processing.py
